# katsdpimageutils

./: Jenkinsfile  README.rst  mypy.ini  requirements.txt  setup.cfg  setup.py
katsdpimageutils/: __init__.py  primary_beam_correction.py  render.py  zscale.py
katsdpimageutils/primarybeamcorrection/: primary_beam_correction.py
katsdpimageutils/test/: test_primary_beam_correction.py  test_zscale.py
scripts/: fits-image.py  fits-primarybeamimage.py  fits-video.py  primarybeamimage-fits.py
