[metadata]
name = katsdpimageutils
description = Utilities shared by katsdpcontim and katsdpimager
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Modified BSD
author = MeerKAT SDP Team
author_email = sdpdev+katsdpimageutils@ska.ac.za
url = https://github.com/ska-sa/katsdpimageutils
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
install_requires =
    matplotlib>=3.1
    astropy
    numpy
python_requires = >=3.6
scripts =
    scripts/fits-image.py
    scripts/fits-video.py
    scripts/fits-primarybeamimage.py

[options.extras_require]
test = nose
primary_beam_correction = katbeam >= 0.1
